# RSE-task1

./: .gitignore  README.md  demo.ipynb  fasttrajectory.html  index.html  pyproject.toml  search.js  test_demo.py
.github/workflows/: docs.yml  publish.yml  tests.yml
html/: fasttrajectory.html  search.js
src/fasttrajectory/: __init__.py  simulation.py
tests/: test_simulation.py
